Cleanup.